<resources xmlns:xliff="urn:oasis:names:en:xliff:document:1.2">
    <string name="app_name_release">Trime</string>
    <string name="app_name_debug">Trime (Debug)</string>
    <string name="qq_group_1">Trime QQ group 1</string>
    <string name="qq_group_2">Trime QQ group 2</string>
    <string name="rime_qq_group">RIME QQ group</string>
    <string name="librime_version">RIME version</string>
    <string name="opencc_version">OpenCC version</string>
    <string name="current_version">Current version</string>
    <string name="license">License</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="build_info_format">Builder: %1$s\nBuild Git Hash: %2$s\nBuild Time: %3$s</string>
    <string name="selected_theme">Themes</string>
    <string name="selected_theme_summary">Select desired theme</string>
    <string name="normal_mode_color">Colors</string>
    <string name="normal_mode_color_summary">Select desired color</string>
    <string name="reset">Reset</string>
    <string name="reset_hint">Overwrite the same files in shared directory with default built-in assets</string>
    <string name="sound_on_keypress">Sound on key press</string>
    <string name="sound_volume">Sound volume on key press</string>
    <string name="vibrate_on_key_press">Vibrate on key press</string>
    <string name="vibrate_on_key_release">Vibrate on key release</string>
    <string name="vibrate_on_key_repeat">Vibrate on key repeat</string>
    <string name="vibration_duration">Vibration duration on key press</string>
    <string name="vibration_amplitude">Vibration amplitude on key press</string>
    <string name="speak_on_keypress">Voice on key press</string>
    <string name="speak_on_commit">Voice on commit</string>
    <string name="key_long_press_timeout">Long key press delay</string>
    <string name="key_repeat_interval">Key repeat interval</string>
    <string name="popup_on_key_press">Popup on key press</string>
    <string name="expand_keypress_area_to_edge">Expand keypress area to edge</string>
    <string name="use_soft_cursor">Use soft cursor (^) in preedit</string>
    <string name="deploy">Deploy</string>
    <string name="sync_user_data_immediately">Sync user data immediately</string>
    <string name="reset_success">Reset Succeeded!</string>
    <string name="reset_failure">Reset Failed!</string>
    <string name="deploy_progress">Deploying…</string>
    <string name="other_ime">Other IMEs</string>
    <string name="ui_mode">UI mode</string>
    <string name="advanced">Advanced</string>
    <string name="user_data_dir">User directory</string>
    <string name="periodic_background_sync">Periodic background sync</string>
    <string name="periodic_background_sync_status">Last: %1$s (%2$s)</string>
    <string name="effects">Effects</string>
    <string name="show_app_icon">Show app icon in launcher</string>
    <string name="only_available_on_some_roms">This option is only available on some ROMs</string>
    <string name="default_">Default</string>
    <string name="clipboard_limit">Clipboard history limit</string>
    <string name="clipboard_compare_rules">Clipboard compare rules</string>
    <string name="clipboard_output_rules">Clipboard output rules</string>
    <string name="clipboard_suggestion">Show clipboard suggestions</string>
    <string name="clipboard_suggestion_timeout">Clipboard suggestion timeout</string>
    <string name="deploy_finish">Deploy finish</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="system_default">System default</string>
    <string name="key_swipe_travel">Min travel for gesture</string>
    <string name="trime_app_slogan">Rimes with Your Keystrokes on Android</string>
    <string name="external_storage_permission_not_available">External storage permission is not available</string>
    <string name="external_storage_permission_granted">External storage permission is granted</string>
    <string name="external_storage_permission_denied">External storage permission was denied, deployment or reading schemas and config may not be available</string>
    <string name="custom_sound_effect_name">Custom key Sound Effect</string>
    <string name="setup__next">Next</string>
    <string name="done">Done</string>
    <string name="setup__enable_ime_hint">Enable <b>Trime</b> in Language and input settings</string>
    <string name="setup__select_ime_hint">Select <b>Trime</b> as your default input method</string>
    <string name="setup__enable_ime">Enable Input Method</string>
    <string name="setup__select_ime">Select Input Method</string>
    <string name="setup__prev">Prev</string>
    <string name="setup__notify_hint">Finish setting up the keyboard</string>
    <string name="setup__step_one">Step 1</string>
    <string name="setup__step_two">Step 2</string>
    <string name="setup__skip">Skip</string>
    <string name="setup__skip_hint">"Do you want to skip the setup wizard? "</string>
    <string name="setup__skip_hint_yes">OK, thanks</string>
    <string name="setup__skip_hint_no">No, please leave me here</string>
    <string name="follow_system_day_night_color">Follow system day/night color</string>
    <string name="hook_ctrl_a">Hook Ctrl+A</string>
    <string name="hook_ctrl_cv">Hook Ctrl+C/V/X</string>
    <string name="hook_ctrl_lr">Hook Ctrl+Left/Right</string>
    <string name="hook_ctrl_zy">Hook Ctrl+Z/Y</string>
    <string name="key_swipe_velocity">The speed of triggering the button swipe gesture (the distance/velocity is sufficient)</string>
    <string name="build_info">Build Info</string>
    <string name="telegram">Telegram</string>
    <string name="quick_bar">Quick bar</string>
    <string name="copy_done">Copied to clipboard!</string>
    <string name="hook_shift_space">Ignore Shift locked for Space</string>
    <string name="test_input">Test your input here</string>
    <string name="input_type_text">Text</string>
    <string name="input_type_number">Number</string>
    <string name="input_type_phone">Phone</string>
    <string name="input_type_email">Email</string>
    <string name="input_type_url">URL</string>
    <string name="input_type_password">Password</string>
    <string name="test_input_number">Enter a number</string>
    <string name="test_input_phone">Enter a phone number</string>
    <string name="test_input_email">Enter an email address</string>
    <string name="test_input_url">Enter a URL</string>
    <string name="test_input_password">Enter a password</string>
    <string name="test_input_panel_title">Test input</string>
    <string name="show_test_input">Show test input</string>
    <string name="hide_test_input">Hide test input</string>
    <string name="hide_test_input_confirm">Hide the test input panel? You can restore it from the toolbar.</string>
    <string name="collapse_test_input">Collapse test input</string>
    <string name="expand_test_input">Expand test input</string>
    <string name="hook_shift_num">Ignore Shift locked for 0-9</string>
    <string name="hook_shift_symbol">Ignore Shift locked for Symbol keys</string>
    <string name="hook_shift_arrow">Keep Shift locked for Arrow keys</string>
    <string name="exception_logcat_created">Logcat process is already created</string>
    <string name="app_crash">Application crashed</string>
    <string name="app_crash_message">Sorry, but we bring you some logs to investigate.</string>
    <string name="real_time_logs">Real-time logs</string>
    <string name="real_time_logs_clear">Clear All Logs</string>
    <string name="real_time_logs_confirm">Do you want to clear all Logs? (This action cannot be undo)</string>
    <string name="crash_logs">Crash logs</string>
    <string name="clear">Clear Screen</string>
    <string name="export">Export</string>
    <string name="scroll_to_bottom">Jump to Bottom</string>
    <string name="developer">Developer</string>
    <string name="profile">Profile</string>
    <string name="virtual_keyboard">Virtual Keyboard</string>
    <string name="theme">Keyboard Style</string>
    <string name="about">About</string>
    <string name="storage">Storage</string>
    <string name="maintenance">Maintenance</string>
    <string name="import_rime_data_folder">Import rime data from folder</string>
    <string name="import_rime_data_folder_summary">Copy a folder (schemas, dictionaries, models, userdb) into the rime user dir, skipping build/ and installation identity; redeploy manually after</string>
    <string name="import_rime_data_folder_result">Imported %1$d files, please redeploy</string>
    <string name="loading">Loading</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="collect">Collect</string>
    <string name="clip_edit_text_hint">Edit text here</string>
    <string name="ask_to_delete_all">Delete All?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="licenses_of_third_party_libraries">Licenses of third-party libraries</string>
    <string name="clipboard">Clipboard</string>
    <string name="collection">Collection</string>
    <string name="simple_key_unpin">Unpin</string>
    <string name="simple_key_pin">Pin</string>
    <string name="delete_all">Delete all</string>
    <string name="disable">Disable</string>
    <string name="a_regular_expression_per_line">A regular expression per line</string>
    <string name="custom_sound_effect_enabled">Use custom key sound</string>
    <string name="enable_landscape_mode">Enable Landscape Mode</string>
    <string name="split_space_percent">Auto Split Keyboard Space Ratio</string>
    <string name="setup__step_three">Setup 3</string>
    <string name="setup__request_permission_hint">Currently Trime requests storage permissions to access its configuration\nand allow users to modify easily.</string>
    <string name="setup__request_permission">Request storage permission</string>
    <string name="grant_permission">Grant permission</string>
    <string name="notification_permission_title">No Notification Permission</string>
    <string name="notification_permission_message">Without the permission to post notifications, we are not able to notify you when some time-consuming operations are done.</string>
    <string name="rime_daemon">Rime Daemon</string>
    <string name="restarting_rime">Restarting Rime</string>
    <string name="select_current_schema">Select current schema</string>
    <string name="enable_schemata">Enable schemata</string>
    <string name="no_schema_to_select">Currently there is no schema to select. Please go to enable schemata from the available list.</string>
    <string name="no_schema_to_enable">No schema to enable. Make sure you have prelude and schema files in the user directory.</string>
    <string name="schemata">Schemata</string>
    <string name="navbar_background">Navigation bar background</string>
    <string name="no_theme_to_select">Currently there is no theme to select.</string>
    <string name="no_color_to_select">Currently there is no color scheme to select.</string>
    <string name="no_effect_to_select">Currently there is no key sound effect to select.</string>
    <string name="setup_channel">Setup Wizard</string>
    <string name="forget_this_word">Forget this word</string>
    <string name="synchronization">Synchronization</string>
    <string name="periodic_background_sync_interval">Interval of background syncing (in minutes)</string>
    <string name="emoji_fav_only">Fav</string>
    <string name="emoji_sort_by_use">Frequent</string>
    <string name="emoji_search_hint">Search by tag</string>
    <string name="emoji_add_tag">Add tag</string>
    <string name="emoji_favorite">Favorite</string>
    <string name="emoji_change">Change</string>
    <string name="emoji_delete_entry">Unregister</string>
    <string name="emoji_delete_disk">Delete from disk</string>
</resources>